--- a/dev/css/style.less
+++ b/dev/css/style.less
@@ -198,3 +198,79 @@
     bottom:0
   }
 }
+
+/*news*/
+.news {
+	position: relative;
+	background: #11A9B7;
+	color: white;
+	width: 100%;
+	&__title-shadow{
+		font-size: 72px;
+		color: rgba(255, 255, 255, 0.1);
+		position: absolute;
+		top: -47px;
+	}
+	&__title-block{
+		position: relative;
+		margin-top: 94px;
+		display: inline-block;
+	}
+	&__title {
+		font-size: 35px;
+		padding-left: 21px;
+	}
+	&__title-line{
+		width: 80px;
+		height: 4px;
+		background-color: white;
+		margin-top: 44px;
+		margin-bottom: 39px;
+		margin-left: 21px;
+	}
+	&__item {
+		display: inline-block;
+		position: relative;
+		border: 1px solid #E5E5E5;
+		width: calc(33% - 15px);
+		height:150px;
+		box-sizing: border-box;
+		margin: 7px;
+		font-family: @font-family-roboto;
+		color: white;
+		text-decoration: none;
+		&__date-day{
+			display: inline-block;
+			width: 44px;
+			height: 44px;
+			background: url("../img/date.svg");
+			font-size: 20px;
+			padding: 9px 13px 6px 8px;
+			margin: 7px 6px 10px 7px;
+			box-sizing: border-box;
+		}
+		&__date-month{
+			font-size: 15px;
+		}
+		&__text{
+			display:inline-block;
+			font-size: 17px;
+			line-height: 24px;
+			margin-left: 29px;
+			margin-right: 29px;
+		}
+		&:hover{
+			background-color: white;
+			color: @light-green;
+		}
+		&__arrow{
+			position: absolute;
+			background: url("../img/news_arrow.svg") center center no-repeat;
+			width: 15px;
+			height: 12px;
+			bottom: 12px;
+			right: 18px;
+		}
+	}
+
+}
